# Lofty

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Example/: CMakeLists.txt
Example/src/: Example.cpp  Example.h  ExampleLayer.cpp  ExampleLayer.h  main.cpp
Lofty/: CMakeLists.txt
Lofty/src/: Lofty.h
Lofty/src/Core/: App.cpp  App.h  AppEvents.h  Event.cpp  Event.h  InputEvents.h  KBMCodes.h  Layer.h  Layers.cpp  Layers.h  Logger.cpp  Logger.h  Timing.h  Window.cpp  Window.h
Lofty/src/Platform/: RenderPlatform.h
Lofty/src/Platform/OpenGL/: GLContext.cpp  GLContext.h
Lofty/src/Platform/Windows/: WindowsWindow.cpp  WindowsWindow.h
Lofty/src/Rendering/: RenderContext.cpp  RenderContext.h
